# wirio-settings

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml
.github/: FUNDING.yaml  dependabot.yaml
.github/workflows/: ci.yaml  ci.yml
crates/wirio-azure-key-vault/: Cargo.toml
crates/wirio-settings/: Cargo.toml
crates/wirio-settings-core/: Cargo.toml
python/wirio_settings/: __init__.py  _wirio_settings.pyi  settings_manager.py
python/wirio_settings/_json/: _json_settings_file_parser.py
python/wirio_settings/aws_secrets_manager/: aws_secrets_manager_settings_provider.py  aws_secrets_manager_settings_source.py
python/wirio_settings/azure_key_vault/: azure_key_vault_settings_provider.py  azure_key_vault_settings_source.py
python/wirio_settings/core/: __init__.py  _extra_dependencies.py  _typed_type.py  convention_changer.py  settings.py  settings_binder.py  settings_builder.py  settings_path.py  settings_provider.py  settings_root.py  settings_section.py  settings_source.py  wirio_undefined.py
python/wirio_settings/environment_variables/: environment_variables_settings_provider.py  environment_variables_settings_source.py
python/wirio_settings/gcp_secret_manager/: gcp_secret_manager_settings_provider.py  gcp_secret_manager_settings_source.py
python/wirio_settings/json/: _json_settings_file_parser.py  json_file_settings_provider.py  json_file_settings_source.py  json_settings_provider.py  json_settings_source.py
python/wirio_settings/json_file/: json_file_settings_source.py
python/wirio_settings/key_per_file/: key_per_file_settings_provider.py  key_per_file_settings_source.py
python/wirio_settings/yaml/: yaml_file_settings_provider.py  yaml_file_settings_source.py  yaml_settings_provider.py  yaml_settings_source.py
python/wirio_settings/yaml_file/: yaml_file_settings_source.py
src/: aws_secrets_manager.rs  azure_key_vault.rs  core.rs  environment_variables.rs  gcp_secret_manager.rs  json.rs  json_file.rs  key_per_file.rs  lib.rs  yaml.rs  yaml_file.rs
src/aws_secrets_manager/: aws_secrets_manager_settings_provider.rs  aws_secrets_manager_settings_source.rs
src/azure_key_vault/: azure_key_vault_settings_provider.rs  azure_key_vault_settings_source.rs  default_azure_credential.rs  remove_user_agent.rs
src/core/: convention_changer.rs  file_provider.rs  serde_parser.rs  setting_lookup.rs  settings_path.rs  settings_provider.rs  settings_source.rs
src/environment_variables/: environment_variables_settings_provider.rs  environment_variables_settings_source.rs
src/gcp_secret_manager/: gcp_secret_manager_settings_provider.rs  gcp_secret_manager_settings_source.rs
src/json/: json_file_settings_provider.rs  json_settings_parser.rs  json_settings_provider.rs
src/json_file/: json_file_settings_provider.rs  json_file_settings_source.rs
src/key_per_file/: key_per_file_settings_provider.rs  key_per_file_settings_source.rs
src/yaml/: yaml_file_settings_provider.rs
src/yaml_file/: yaml_file_settings_provider.rs  yaml_file_settings_source.rs
tests/: test_integration.py  test_settings_manager.py
tests/aws_secrets_manager/: test_aws_secrets_manager_settings_provider.py  test_aws_secrets_manager_settings_source.py
tests/azure_key_vault/: test_azure_key_vault_settings_provider.py  test_azure_key_vault_settings_source.py
tests/core/: test_convention_changer.py  test_settings_binder.py  test_settings_provider.py  test_settings_section.py
tests/environment_variables/: test_environment_variables_settings_provider.py
tests/gcp_secret_manager/: test_gcp_secret_manager_settings_provider.py  test_gcp_secret_manager_settings_source.py
tests/json/: test_json_file_settings_provider.py  test_json_settings_file_parser.py
tests/yaml/: test_yaml_file_settings_provider.py  test_yaml_settings_provider.py
