[package]
name = "wirio-settings"
version = "0.1.0"
edition = "2024"

[lib]
name = "_wirio_settings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = [
    "experimental-inspect",
    "experimental-async",
    "auto-initialize"
] }
regex = "1.12.4"
tokio = { version = "1.52.3", features = ["full"] }

[package.metadata.maturin]
python-source = "python"
