[package]
name = "wirio-settings"
version = "0.1.0"
edition = "2024"

[lib]
name = "_wirio_settings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = [
    "experimental-inspect",
    "experimental-async",
] }
regex = "1.12.4"
serde-saphyr = { version = "0.0.28", default-features = false, features = [
    "deserialize",
] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
mockall = "0.15.0"

[package.metadata.maturin]
python-source = "python"

[lints.clippy]
pedantic = "deny"
