[package]
name = "wirio-settings"
version = "0.2.0"
edition = "2024"

[lib]
name = "_wirio_settings"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.89"
aws-config = { version = "1.8.18", features = ["credentials-login"] }
aws-sdk-secretsmanager = "1.108.0"
azure_core = "1.0.0"
azure_identity = "1.0.0"
azure_security_keyvault_secrets = "1.0.0"
futures = "0.3.32"
google-cloud-auth = "1.13.0"
google-cloud-gax = "1.11.0"
google-cloud-secretmanager-v1 = "1.10.0"
pyo3 = { version = "0.29.0", features = [
    "experimental-inspect",
    "experimental-async",
] }
regex = "1.12.4"
serde-saphyr = { version = "0.0.28", default-features = false, features = [
    "deserialize",
] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
mockall = "0.15.0"
tempfile = "3.27.0"

[package.metadata.maturin]
python-source = "python"

[lints.clippy]
pedantic = "warn"
